style.css
html, body {
  min-height: 100vh;
  position: relative;
  margin: 0;
}

a {
  text-decoration: none;
}

h2 {
  margin: 12px 0;
}

h4 {
  margin: 12px 0;
}

p {
  font-size: 1rem;
  margin: 8px 0;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

#header-container {
  margin-right: auto;
  margin-left: auto;
  max-width: 1320px;
  display: flex;
}

#header {
  background-color: aqua;
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
}

#logo {
  margin-right: auto;
  padding-left: 1em;
  white-space: nowrap;
}

#nav-list {
  display: flex;
  flex-wrap: wrap;
}

.nav-item {
  padding: 1rem;
}

#content {
  max-width: 1320px;
  margin-right: auto;
  margin-left: auto;
  padding-bottom: 5rem;
}

#carousel {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

.slide {
  display: none;
}

#prev, #next {
  padding: 16px;
  font-size: 24px;
  font-weight: bold;
  border-radius: 0 3px 3px 0;
  cursor: pointer;
  user-select: none;
}

#next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

#prev:hover, #next:hover {
  background-color: rgba(0,0,0,0.8);
}

#current-slide {
  text-align: center;
}

.dot {
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbbbbb;
  border-radius: 50%;
  display: inline-block;
  cursor: pointer;
}

.dot:hover, .active {
  background-color: #717171;
}

#intro-text-wrapper {
  margin: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

#submit-bar {
  margin: 24px;
  padding: 8px;
  border: solid;
  border-radius: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#user {
  margin-right: auto;
}

#profile-picture {
  height: 70px;
  width: 70px;
  border: solid;
  border-radius: 50%;
  object-fit: cover;
}

#form-button {
  padding-right: 16px;
}

#modal-box-background {
  height: 100%;
  width: 100%;
  background-color: rgba(0,0,0,0.4);
  position: fixed;
  top: 0;
  left: 0;
  display: none;
  overflow: auto;
  z-index: 1;
}

#modal-box {
  width: 16%;
  margin: 5% auto;
  padding: 1%;
  background-color: white;
  border-radius: 12px;
  display: flex;
  flex-direction: column;
}

#modal-top {
  margin-bottom: 8px;
  display: flex;
  align-items: center;
}

#modal-title {
  margin-right: auto;
}

#modal-close {
  font-size: 1.25rem;
  padding: 0.25rem;
  user-select: none;
}

#modal-close:hover {
  background-color: #bbbbbb;
  border-radius: 2px;
  cursor: pointer;
}

#form {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

#synopsis {
  max-height: 240px;
  resize: vertical;
}

.read {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
}

.read-check {
  position: relative;
  display: inline-block;
  width: 36px;
  height: 24px;
}

.read input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #bbbbbb;
  border-radius: 24px;
  cursor: pointer;
  transition: .25s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 18px;
  width: 18px;
  left: 4px;
  bottom: 3px;
  background-color: white;
  border-radius: 50%;
  transition: .25s;
}
input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  transform: translateX(10px);
}

#cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
  justify-content: center;
}

.card {
  height: clamp(160px, 80%, 360px);
  width: clamp(120px, 80%, 280px);
  margin: 12px;
  padding: 12px;
  background-color: greenyellow;
  border: solid;
  border-radius: 12px;
  justify-self: center;
  align-self: center;
}

.card-read {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.read-check {
  margin-left: auto;
  margin-right: 1rem;
}

#footer-container {
  width: 100%;
  position: absolute;
  bottom: 0;
  display: flex;
  justify-content: center;
}

#footer {
  height: 4rem;
  max-width: 1320px;
  background-color: purple;
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
}

#notice {
  margin-right: auto;
  margin-left: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

#sm-list {
  margin-right: 2rem;
  display: flex;
  flex-wrap: wrap;
}

.sm-logo {
  height: 24px;
  width: 24px;
  margin: 0 12px;
}

